--- a/index.html
+++ b/index.html
@@ -390,6 +390,13 @@ function linkify( selector ) {
 				// parallaxBackgroundImage: 'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg',
 				// parallaxBackgroundSize: '2100px 900px',
 
+                multiplex: {
+                    // Example values. To generate your own, see the socket.io server instructions.
+                    secret: null, // null so the clients do not have control of the master presentation
+                    id: '2bda08bc8708a2fe', // id, obtained from socket.io server
+                    url: 'http://ec2-54-175-227-225.compute-1.amazonaws.com:1948' // Location of your socket.io server
+                },
+
 				// Optional libraries used to extend on reveal.js
 				dependencies: [
 					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
@@ -397,7 +404,10 @@ function linkify( selector ) {
 					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
 					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
 					{ src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
-					{ src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+					{ src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } },
+                    { src: 'socket.io/socket.io.js', async: true },
+                    { src: 'plugin/notes-server/client.js', async: true }
+                    { src: 'plugin/multiplex/client.js', async: true }
 				]
 			});
 
